--- a/FootballWorldCupScoreBoard.UnitTests/FootballWorldCupScoreBoard.UnitTests.csproj
+++ b/FootballWorldCupScoreBoard.UnitTests/FootballWorldCupScoreBoard.UnitTests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FootballWorldCupScoreBoardLibrary\FootballWorldCupScoreBoard.Library.csproj" />
+  </ItemGroup>
+
 </Project>
